--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /Leo.Blog.IDAL/obj
 /Leo.Blog.Model/bin
 /Leo.Blog.Model/obj
+/Leo.Blog.BLL/bin
+/Leo.Blog.BLL/obj
+/Leo.Blog.ViewModel/bin
+/Leo.Blog.ViewModel/obj
+/Leo.Blog.IBLL/bin
+/Leo.Blog.IBLL/obj
