--- a/Leo.Blog.DAL/Leo.Blog.DAL.csproj
+++ b/Leo.Blog.DAL/Leo.Blog.DAL.csproj
@@ -48,6 +48,13 @@
   <ItemGroup>
     <Compile Include="BaseRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SysModule\Sys_AccountInfo_D.cs" />
+    <Compile Include="SysModule\Sys_Account_D.cs" />
+    <Compile Include="SysModule\Sys_Authorize_D.cs" />
+    <Compile Include="SysModule\Sys_ModuleBtn_D.cs" />
+    <Compile Include="SysModule\Sys_Modules_D.cs" />
+    <Compile Include="SysModule\Sys_OrgInfo_D.cs" />
+    <Compile Include="SysModule\Sys_Roles_D.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Leo.Blog.IDAL\Leo.Blog.IDAL.csproj">
@@ -63,9 +70,7 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="SysModule\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
