--- a/Leo.Blog.Common/Leo.Blog.Common.csproj
+++ b/Leo.Blog.Common/Leo.Blog.Common.csproj
@@ -41,12 +41,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1 - 复制%282%29\" />
-    <Folder Include="NewFolder1 - 复制%283%29\" />
-    <Folder Include="NewFolder1 - 复制\" />
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
