--- a/Leo.Blog.ViewModel/Leo.Blog.ViewModel.csproj
+++ b/Leo.Blog.ViewModel/Leo.Blog.ViewModel.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResCode.cs" />
     <Compile Include="SysModule\LoginVM.cs" />
   </ItemGroup>
   <ItemGroup />
