--- a/Leo.Blog/Leo.Blog.csproj
+++ b/Leo.Blog/Leo.Blog.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
+    <Compile Include="Filter\ErrorFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -500,7 +501,6 @@
     <Content Include="Content\B-JUI\themes\purple\zTreeStandard.png" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
@@ -522,6 +522,7 @@
     <Content Include="Content\B-JUI\themes\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\B-JUI\themes\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\B-JUI\themes\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="log4net.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
