--- a/Leo.Blog.Common/Leo.Blog.Common.csproj
+++ b/Leo.Blog.Common/Leo.Blog.Common.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Encrypt\EncryptTools.cs" />
     <Compile Include="JsonHelper\JsonConverter.cs" />
     <Compile Include="JsonHelper\JsonHelper.cs" />
     <Compile Include="LogHelper\Log4netHelper.cs" />
